<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>img_process</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="autism2484684043@163.com">cmyhj</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>common_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
